--- a/src/news/2021-06-24.md
+++ b/src/news/2021-06-24.md
@@ -4,10 +4,10 @@ tags:
   - news
 title: Where Does Power Lie?
 subtitle: 
-type: Print
+type: 
 author: 
   name: Anthony Warnick
-  link: http://anthonywarnick.com
+  # link: 
 date: 2021-06-24
 
 ---
